[package]
name = "anvil_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs" }